--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-first></app-first>
+<h2 class="title-second">Витрина</h2>
+<app-product-list></app-product-list>
+<h2 class="title-second">Корзина</h2>
