--- a/src/app/components/first/first.component.html
+++ b/src/app/components/first/first.component.html
@@ -1,15 +1,17 @@
-<p>
-  <b>Name: </b><span>{{name}}</span>
-</p>
-<p>
-  <b>Description: </b><span>{{description}}</span>
-</p>
-<p>
-  <b>Price: </b><span>{{price}}</span>
-</p>
-<p>
-  <b>Category: </b><span>{{category}}</span>
-</p>
-<p>
-  <b>Available: </b><span>{{isAvailable ? 'YES' : 'NO'}}</span>
-</p>
+<ul class="product-info info">
+  <li class="info-field info-field__title">
+    <span>{{name}}</span>
+  </li>
+  <li class="info-field info-field__description">
+    <span>{{description}}</span>
+  </li>
+  <li class="info-field info-field__price">
+    <span>{{price}}</span><span class="info-field__price-rouble"> ₽</span>
+  </li>
+  <li class="info-field">
+    <span>Категория: </span><span>{{category}}</span>
+  </li>
+  <li class="info-field">
+    <span>В наличии: </span><span>{{isAvailable ? 'ДА' : 'НЕТ'}}</span>
+  </li>
+</ul>
