--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+html, body {
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  color: #151528;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
