--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,3 +1,3 @@
 <div class="product-list">
-  <app-product class="product-item" *ngFor="let product of products" [product]="product"></app-product>
+  <app-product class="product-item" *ngFor="let product of productsService.getProducts()" [product]="product"></app-product>
 </div>
