feat: Task 2. Components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<h2 class="title-second">Витрина</h2>
-<app-product-list></app-product-list>
-<h2 class="title-second">Корзина</h2>
-<app-cart-list></app-cart-list>
+<h1 class="text-center app-title" #appTitle></h1>
+<app-products></app-products>
+<app-cart></app-cart>
