--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,3 +9,12 @@ html, body {
 *:after {
   box-sizing: border-box;
 }
+
+.title-second {
+  font-size: 2.1rem;
+  text-align: center;
+}
+
+.text-center {
+  text-align: center;
+}
