--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,2 @@
-<h1 class="text-center app-title" #appTitle></h1>
-<app-products></app-products>
-<app-cart></app-cart>
+<h1 appFontSize="64px" class="text-center app-title" #appTitle></h1>
+<app-first></app-first>
