--- a/src/app/components/cart/cart-item/cart-item.component.scss
+++ b/src/app/components/cart/cart-item/cart-item.component.scss
@@ -1,48 +1,44 @@
-.cart-item {
-  &__id,
-  &__quantity,
-  &__price,
-  &__action {
-    padding: 0 10px;
-  }
-  &__quantity {
-    display: inline-flex;
-    align-items: center;
-    &-button {
-      border: none;
-      width: 24px;
-      height: 24px;
+td {
+  padding: 0 10px;
+}
+.cart-item__quantity {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  &-button {
+    border: none;
+    width: 24px;
+    height: 24px;
 
-      background-color: transparent;
-      background-repeat: no-repeat;
-      background-position: center;
-      background-size: cover;
+    background-color: transparent;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 
-      cursor: pointer;
-
-      &--decrease {
-        background-image: url("../../../../assets/img/minus.svg");
-        &:hover,
-        &:active {
-          background-color: #fcd9d9;
-        }
-      }
-      &--increase {
-        background-image: url("../../../../assets/img/plus.svg");
-        &:hover,
-        &:active {
-          background-color: #dcfcd9;
-        }
-      }
-    }
-    &-text {
-      display: inline-block;
-      min-width: 3em;
-      padding: 0 5px;
-    }
-  }
-  &__button-remove {
-    color:indianred;
     cursor: pointer;
+
+    &--decrease {
+      background-image: url("../../../../assets/img/minus.svg");
+      &:hover,
+      &:active {
+        background-color: #fcd9d9;
+      }
+    }
+    &--increase {
+      background-image: url("../../../../assets/img/plus.svg");
+      &:hover,
+      &:active {
+        background-color: #dcfcd9;
+      }
+    }
   }
+  &-text {
+    display: inline-block;
+    min-width: 3em;
+    padding: 0 5px;
+  }
+}
+.cart-item__button-remove {
+  color:indianred;
+  cursor: pointer;
 }
