--- a/src/app/components/cart/cart-list/cart-list.component.html
+++ b/src/app/components/cart/cart-list/cart-list.component.html
@@ -2,18 +2,54 @@
   <table class="cart-table">
     <thead>
     <tr>
-      <th>#</th>
-      <th>Название</th>
-      <th>Стоимость</th>
-      <th>Количество</th>
-      <th>Действие</th>
+      <th><span class="cart-table__column-name">#</span></th>
+      <th [class.cart-table__active-column]="sort.key==='name'">
+        <div class="cart-table__sort-option">
+          <span
+            class="cart-table__column-name cart-table__column-name--sort"
+            (click)="onToggleSort('name')"
+          >Название</span>
+          <label class="cart-table__sort-label">
+            <input class="cart-table__sort-input" type="checkbox" [(ngModel)]="sort.isAsc" (change)="onToggleSort('name')">
+            <span [class.cart-table__sort-label--active]="sort.isAsc">↑</span>
+            <span [class.cart-table__sort-label--active]="!sort.isAsc">↓</span>
+          </label>
+        </div>
+      </th>
+      <th [class.cart-table__active-column]="sort.key==='price'">
+        <div class="cart-table__sort-option">
+          <span
+            class="cart-table__column-name cart-table__column-name--sort"
+            (click)="onToggleSort('price')"
+          >Стоимость</span>
+          <label class="cart-table__sort-label">
+            <input class="cart-table__sort-input" type="checkbox" [(ngModel)]="sort.isAsc" (change)="onToggleSort('price')">
+            <span [class.cart-table__sort-label--active]="sort.isAsc">↑</span>
+            <span [class.cart-table__sort-label--active]="!sort.isAsc">↓</span>
+          </label>
+        </div>
+      </th>
+      <th [class.cart-table__active-column]="sort.key==='quantity'">
+        <div class="cart-table__sort-option">
+          <span
+            class="cart-table__column-name cart-table__column-name--sort"
+            (click)="onToggleSort('quantity')"
+          >Количество</span>
+          <label class="cart-table__sort-label">
+            <input class="cart-table__sort-input" type="checkbox" [(ngModel)]="sort.isAsc" (change)="onToggleSort('quantity')">
+            <span [class.cart-table__sort-label--active]="sort.isAsc">↑</span>
+            <span [class.cart-table__sort-label--active]="!sort.isAsc">↓</span>
+          </label>
+        </div>
+      </th>
+      <th><span class="cart-table__column-name">Действие</span></th>
     </tr>
     </thead>
     <tbody>
       <tr
         class="cart-item"
         appHighlight
-        *ngFor="let product of cartService.cartProducts; let idx = index;"
+        *ngFor="let product of cartService.cartProducts | orderBy:sort.key:sort.isAsc; let idx = index;"
         app-cart-item
         [product]="product"
         [index]="idx"
@@ -24,7 +60,7 @@
       <tr class="cart-item cart-item--total">
         <td></td>
         <td>Всего</td>
-        <td class="text-center cart-item__price">{{cartService.totalSum}}</td>
+        <td class="text-center cart-item__price">{{cartService.totalSum | currency:'RUB':'symbol-narrow'}}</td>
         <td class="text-center cart-item__quantity">
           <span class="cart-item__quantity-text">{{cartService.totalQuantity}}</span>
         </td>
