--- a/src/app/components/products/product-list/product-list.component.html
+++ b/src/app/components/products/product-list/product-list.component.html
@@ -1,7 +1,7 @@
 <div class="product-list">
   <app-product
     class="product__item"
-    *ngFor="let product of productsService.getProducts()"
+    *ngFor="let product of products$ | async"
     [product]="product"
     (buy)="onBuy($event)">
   </app-product>
