feat: Task 5. Routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<h1 appFontSize="64px" class="text-center app-title" #appTitle></h1>
+<h1 class="text-center app-title">
+  <a class="text-center link app-title-link" routerLink="/home" #appTitle></a>
+</h1>
 <app-first></app-first>
