--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,12 @@
+@import '../styles/main';
+
 .app-title {
   font-size: 48px;
+  background-color: $dark-background;
+  margin: 0;
+  padding: 10px 0;
+
+  &-link {
+    color: #ffffff;
+  }
 }
