--- a/src/app/components/cart/cart-list/cart-list.component.html
+++ b/src/app/components/cart/cart-list/cart-list.component.html
@@ -73,7 +73,7 @@
 </div>
 <ng-template #emptyCart>
   <p class="cart__empty">
-    <span class="cart__empty-title">В корзине нет товаров</span>
+    <span class="cart__empty-title">Корзина пуста</span>
     <span></span>
   </p>
 </ng-template>
