--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,2 +1,12 @@
-<h2 class="title-second">Корзина</h2>
+<h2 class="cart-title page-title">Корзина</h2>
+<nav class="cart-menu nav">
+  <ul class="nav__tabs">
+    <li routerLinkActive="active">
+      <a class="link nav__link" routerLink="/home">Вернуться к покупкам</a>
+    </li>
+    <li routerLinkActive="active">
+      <a class="link nav__link" routerLink="/order">Оформить заказ</a>
+    </li>
+  </ul>
+</nav>
 <app-cart-list></app-cart-list>
