--- a/src/app/components/first/first.component.html
+++ b/src/app/components/first/first.component.html
@@ -1,3 +1,4 @@
-<p class="text-center">Добро пожаловать: {{name}}</p>
-<app-products></app-products>
-<app-cart></app-cart>
+<div class="container">
+  <app-header-menu></app-header-menu>
+  <router-outlet></router-outlet>
+</div>
