--- a/src/app/components/products/product-list/product-list.component.html
+++ b/src/app/components/products/product-list/product-list.component.html
@@ -3,6 +3,7 @@
     class="product__item"
     *ngFor="let product of products$ | async"
     [product]="product"
-    (buy)="onBuy($event)">
-  </app-product>
+    (buy)="onBuy($event)"
+    (viewProduct)="onViewProduct($event)"
+  ></app-product>
 </div>
