--- a/src/app/components/products/product/product.component.scss
+++ b/src/app/components/products/product/product.component.scss
@@ -28,22 +28,42 @@
   height: 100%;
   padding: 0;
 
+  list-style-type: none;
+
   &__field {
-    list-style-type: none;
     margin: 10px 0;
-
     &--title {
-      min-height: 2em;
-      margin-bottom: 30px;
+      a {
+        display: block;
+        min-height: 2em;
+        padding-bottom: 30px;
 
-      text-align: center;
-      font-weight: 700;
-      font-size: larger;
+        text-align: center;
+        font-weight: 700;
+        font-size: larger;
+      }
     }
-
-    &--description {
+    &--image {
       margin-bottom: auto;
-      text-align: justify;
+      a {
+        display: block;
+        padding: 10px 0;
+      }
+      &-wrapper {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        width: 170px;
+        height: 170px;
+        margin: 0 auto;
+
+        img {
+          display: block;
+          max-width: 100%;
+          max-height: 100%;
+        }
+      }
     }
 
     &--price {
