feat: Task 8. Forms

--- a/src/app/components/orders/orders.component.html
+++ b/src/app/components/orders/orders.component.html
@@ -1,3 +1,9 @@
-<p>
-  orders works!
-</p>
+<h2 class="orders-title page-title">Оформление заказа</h2>
+<nav class="orders-menu nav">
+  <ul class="nav__tabs">
+    <li routerLinkActive="active">
+      <a class="link nav__link" routerLink="/cart">Вернуться в корзину</a>
+    </li>
+  </ul>
+</nav>
+<app-process-order></app-process-order>
