--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,20 @@
 @import './styles/main';
 
-html, body {
-  font-family: 'Roboto', sans-serif;
+
+html {
+  width: 100vw;
+  overflow-x: hidden;
+  height: 100%;
+}
+
+body {
+  height: 100%;
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
   font-size: 14px;
   color: $dark-color;
-  margin: 0;
 }
+
 body.dark-theme {
   color: $light-color;
   background-color: $dark-color;
